# EmuChan

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md
src/: bus.rs  cartridge.rs  cpu.rs  emuchan.rs  main.rs  ppu.rs  ui.rs
src/cartridge/: mod.rs
src/cartridge/utils/: licensee_codes.rs  mod.rs
src/common/: boot.rs  disassembler.rs  mod.rs
src/config/: mod.rs
src/core/: bus.rs  cpu.rs
src/core/cartridge/: mod.rs
src/core/cartridge/common/: cartridge_destination.rs  ram_size.rs
src/core/cpu/: mod.rs
src/core/cpu/opcodes/: mod.rs
src/core/cpu/register/: mod.rs
src/core/ppu/: mod.rs
src/core/ppu/common/: mod.rs  pallete.rs
src/core/ppu/register/: lcdc.rs  stat.rs
src/disassembler/: mod.rs
src/gui/: app.rs
src/gui/common/: dialog.rs  mod.rs  palettes.rs  window_scale.rs
src/ppu/: mod.rs
src/tests/: sm83.rs
src/utils/: boot.rs  cartridge_type.rs  config.rs  mod.rs  rom_size.rs
