[package]
name = "EmuChan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1
debug = 1

[profile.dev.package."*"]
opt-level = 3


[dependencies]
clap = {version = "4", features = ["derive"]}
serde = {version = "1.0.210", features = ["derive"]}
colored = "3.0.0"
eframe = "0.31.1"
egui_sdl2_gl = "0.31.0"
env_logger = "0.10.2"
log = "0.4.22"
rfd = "0.15.3"
sdl2 = "0.37.0"
serde_json = "1.0.128"
